amdgpu_job_free during playing Cyberpunk 2077
Brief summary of the problem:
When I play Cyberpunk 2077 (via wine 8.2 from Fedora repository) sometime there is a moment when display freezes. By sound I know that game goes but cannot continue playing. Have to xkill the window with game. X11 session looks fine still but need to reboot system to be able to play again.
Dmesg output:
[nie 12 mar 19:33:26 2023] BUG: kernel NULL pointer dereference, address: 0000000000000078
[nie 12 mar 19:33:26 2023] #PF: supervisor read access in kernel mode
[nie 12 mar 19:33:26 2023] #PF: error_code(0x0000) - not-present page
[nie 12 mar 19:33:26 2023] PGD 1f68af067 P4D 1f68af067 PUD 3fa289067 PMD 2bdfba067 PTE 0
[nie 12 mar 19:33:26 2023] Oops: 0000 [#1] PREEMPT SMP NOPTI
[nie 12 mar 19:33:26 2023] CPU: 7 PID: 318582 Comm: GameThread Not tainted 6.2.5-300.fc37.x86_64 #1
[nie 12 mar 19:33:26 2023] Hardware name: Micro-Star International Co., Ltd. MS-7C37/X570-A PRO (MS-7C37), BIOS H.H0 05/19/2022
[nie 12 mar 19:33:26 2023] RIP: 0010:drm_sched_job_cleanup+0x2a/0x130 [gpu_sched]
[nie 12 mar 19:33:26 2023] Code: 0f 1f 44 00 00 55 53 48 89 fb 48 83 ec 10 48 8b 7f 20 65 48 8b 04 25 28 00 00 00 48 89 44 24 08 31 c0 48 c7 04 24 00 00 00 00 <8b> 47 78 85 c0 0f 84 c2 00 00 00 48 83 ff c0 74 1f 48 8d 57 78 b8
[nie 12 mar 19:33:26 2023] RSP: 0018:ffffaf64da9dfa68 EFLAGS: 00010246
[nie 12 mar 19:33:26 2023] RAX: 0000000000000000 RBX: ffff8c55c7b11800 RCX: 0000000501906007
[nie 12 mar 19:33:26 2023] RDX: 0000000501904007 RSI: da71631daa7d6d33 RDI: 0000000000000000
[nie 12 mar 19:33:26 2023] RBP: 0000000000000000 R08: 0000000000000000 R09: 000000008040003b
[nie 12 mar 19:33:26 2023] R10: 0000000000000001 R11: 0000000000000000 R12: 00000000ffffffff
[nie 12 mar 19:33:26 2023] R13: 0000000000000018 R14: 0000000000000001 R15: 00000000fffffff5
[nie 12 mar 19:33:26 2023] FS: 000000000f4ff6c0(0000) GS:ffff8c5cbefc0000(0000) knlGS:000000000eee0000
[nie 12 mar 19:33:26 2023] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[nie 12 mar 19:33:26 2023] CR2: 0000000000000078 CR3: 00000003cb71a000 CR4: 0000000000350ee0
[nie 12 mar 19:33:26 2023] Call Trace:
[nie 12 mar 19:33:26 2023] <TASK>
[nie 12 mar 19:33:26 2023] amdgpu_job_free+0x15/0xc0 [amdgpu]
[nie 12 mar 19:33:26 2023] amdgpu_cs_parser_fini+0x135/0x1a0 [amdgpu]
[nie 12 mar 19:33:26 2023] amdgpu_cs_ioctl+0x3f1/0x2060 [amdgpu]
[nie 12 mar 19:33:26 2023] ? __pfx_amdgpu_cs_ioctl+0x10/0x10 [amdgpu]
[nie 12 mar 19:33:26 2023] drm_ioctl_kernel+0xc9/0x170
[nie 12 mar 19:33:26 2023] drm_ioctl+0x22f/0x410
[nie 12 mar 19:33:26 2023] ? __pfx_amdgpu_cs_ioctl+0x10/0x10 [amdgpu]
[nie 12 mar 19:33:26 2023] amdgpu_drm_ioctl+0x4a/0x80 [amdgpu]
[nie 12 mar 19:33:26 2023] __x64_sys_ioctl+0x90/0xd0
[nie 12 mar 19:33:26 2023] do_syscall_64+0x5b/0x80
[nie 12 mar 19:33:26 2023] ? do_syscall_64+0x67/0x80
[nie 12 mar 19:33:26 2023] ? __irq_exit_rcu+0x3d/0x140
[nie 12 mar 19:33:26 2023] entry_SYSCALL_64_after_hwframe+0x72/0xdc
[nie 12 mar 19:33:26 2023] RIP: 0033:0x7fe9567c9d6f
[nie 12 mar 19:33:26 2023] Code: 00 48 89 44 24 18 31 c0 48 8d 44 24 60 c7 04 24 10 00 00 00 48 89 44 24 08 48 8d 44 24 20 48 89 44 24 10 b8 10 00 00 00 0f 05 <89> c2 3d 00 f0 ff ff 77 18 48 8b 44 24 18 64 48 2b 04 25 28 00 00
[nie 12 mar 19:33:26 2023] RSP: 002b:000000000f4fd120 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
[nie 12 mar 19:33:26 2023] RAX: ffffffffffffffda RBX: 000000000f4fd408 RCX: 00007fe9567c9d6f
[nie 12 mar 19:33:26 2023] RDX: 000000000f4fd230 RSI: 00000000c0186444 RDI: 000000000000006d
[nie 12 mar 19:33:26 2023] RBP: 000000000f4fd230 R08: 00007fe8a804b670 R09: 000000000f4fd1c0
[nie 12 mar 19:33:26 2023] R10: 000000007e7c6db0 R11: 0000000000000246 R12: 00000000c0186444
[nie 12 mar 19:33:26 2023] R13: 000000000000006d R14: 00007fe8a804b5a0 R15: 000000000000000a
[nie 12 mar 19:33:26 2023] </TASK>
[nie 12 mar 19:33:26 2023] Modules linked in: tls rfcomm snd_seq_dummy snd_hrtimer snd_seq xt_nat veth nf_conntrack_netlink nfnetlink xt_addrtype br_netfilter xt_CHECKSUM xt_MASQUERADE xt_conntrack ipt_REJECT nf_reject_ipv4 ip6table_mangle ip6>
[nie 12 mar 19:33:26 2023] iommu_v2 crct10dif_pclmul nvme drm_buddy crc32_pclmul crc32c_intel gpu_sched polyval_clmulni drm_display_helper polyval_generic ghash_clmulni_intel hid_microsoft sha512_ssse3 nvme_core ff_memless cec sp5100_tco r816>
[nie 12 mar 19:33:26 2023] CR2: 0000000000000078
[nie 12 mar 19:33:26 2023] ---[ end trace 0000000000000000 ]---
[nie 12 mar 19:33:26 2023] RIP: 0010:drm_sched_job_cleanup+0x2a/0x130 [gpu_sched]
[nie 12 mar 19:33:26 2023] Code: 0f 1f 44 00 00 55 53 48 89 fb 48 83 ec 10 48 8b 7f 20 65 48 8b 04 25 28 00 00 00 48 89 44 24 08 31 c0 48 c7 04 24 00 00 00 00 <8b> 47 78 85 c0 0f 84 c2 00 00 00 48 83 ff c0 74 1f 48 8d 57 78 b8
[nie 12 mar 19:33:26 2023] RSP: 0018:ffffaf64da9dfa68 EFLAGS: 00010246
[nie 12 mar 19:33:26 2023] RAX: 0000000000000000 RBX: ffff8c55c7b11800 RCX: 0000000501906007
[nie 12 mar 19:33:26 2023] RDX: 0000000501904007 RSI: da71631daa7d6d33 RDI: 0000000000000000
[nie 12 mar 19:33:26 2023] RBP: 0000000000000000 R08: 0000000000000000 R09: 000000008040003b
[nie 12 mar 19:33:26 2023] R10: 0000000000000001 R11: 0000000000000000 R12: 00000000ffffffff
[nie 12 mar 19:33:26 2023] R13: 0000000000000018 R14: 0000000000000001 R15: 00000000fffffff5
[nie 12 mar 19:33:26 2023] FS: 000000000f4ff6c0(0000) GS:ffff8c5cbefc0000(0000) knlGS:000000000eee0000
[nie 12 mar 19:33:26 2023] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[nie 12 mar 19:33:26 2023] CR2: 0000000000000078 CR3: 00000003cb71a000 CR4: 0000000000350ee0
[nie 12 mar 19:33:26 2023] note: GameThread[318582] exited with irqs disabled
Hardware description:
- CPU: AMD Ryzen 5 3600
- GPU: 2f:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Navi 22 [Radeon RX 6700/6700 XT/6750 XT / 6800M/6850M XT] [1002:73df] (rev c1)
- XFX Radeon RX 6700 XT
- System Memory: 32GB
- Display(s): 34" 3440x1440
- Type of Display Connection: DisplayPort
System information:
- Distro name and Version: Fedora 37
- Kernel version: Linux puchatek.local 6.2.5-300.fc37.x86_64 #1 (closed) SMP PREEMPT_DYNAMIC Sat Mar 11 15:27:54 UTC 2023 x86_64 x86_64 x86_64 GNU/Linux
- AMD official driver version: amdgpu from kernel
How to reproduce the issue:
On my system it happens during playing Cyberpunk 2077. Not checked yet with other games - this one uses card the most.
Screenshots/video files
(will now reboot and retry - provide once it happen. But it does not have any visible artifacts.)