drivers/gpu/drm/amd/amdgpu/amdgpu_cs.c
@@ -1432,7 +1432,7 @@ static int amdgpu_cs_submit(struct amdgpu_cs_parser *p,
 		r = drm_sched_job_add_dependency(&leader->base, fence);
 		if (r) {
 			dma_fence_put(fence);
-			goto error_cleanup;
+			return r;
 		}
 #endif
 	}
@@ -1461,7 +1461,8 @@ static int amdgpu_cs_submit(struct amdgpu_cs_parser *p,
 	}
 	if (r) {
 		r = -EAGAIN;
-		goto error_unlock;
+		mutex_unlock(&p->adev->notifier_lock);
+		return r;
 	}
 #else
 	/* No memory allocation is allowed while holding the mn lock */
@@ -1524,18 +1525,6 @@ static int amdgpu_cs_submit(struct amdgpu_cs_parser *p,
 #endif
 	mutex_unlock(&p->bo_list->bo_list_mutex);
 	return 0;
-
-error_unlock:
-#ifdef HAVE_AMDKCL_HMM_MIRROR_ENABLED
-	mutex_unlock(&p->adev->notifier_lock);
-#else
-	amdgpu_mn_unlock(p->mn);
-#endif
-
-error_cleanup:
-	for (i = 0; i < p->gang_size; ++i)
-		drm_sched_job_cleanup(&p->jobs[i]->base);
-	return r;
 }
 
 /* Cleanup the parser structure */
